[WGSL] Implement dot4I8Packed and dot4U8Packed built-in functions https://bugs.webkit.org/show_bug.cgi?id=265343 rdar://118796882

Reviewed by Mike Wyrzykowski.

These functions were recently added to the spec [1] & [2].

[1]: https://www.w3.org/TR/WGSL/#dot4U8Packed-builtin
[2]: https://www.w3.org/TR/WGSL/#dot4I8Packed-builtin

* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::CONSTANT_FUNCTION):
* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::emitNecessaryHelpers):
(WGSL::Metal::FunctionDefinitionWriter::visit):
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
* Source/WebGPU/WGSL/TypeDeclarations.rb:
* Source/WebGPU/WGSL/WGSLShaderModule.h:
(WGSL::ShaderModule::usesDot4I8Packed const):
(WGSL::ShaderModule::setUsesDot4I8Packed):
(WGSL::ShaderModule::usesDot4U8Packed const):
(WGSL::ShaderModule::setUsesDot4U8Packed):
* Source/WebGPU/WGSL/tests/valid/overload.wgsl:

Canonical link: https://commits.webkit.org/272814@main