Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp
@@ -354,6 +354,30 @@ void FunctionDefinitionWriter::emitNecessaryHelpers()
         m_stringBuilder.append(m_indent, "}\n");
     }
 
+    if (m_callGraph.ast().usesDot4I8Packed()) {
+        m_stringBuilder.append(m_indent, "int __wgslDot4I8Packed(uint lhs, uint rhs)\n");
+        m_stringBuilder.append(m_indent, "{\n");
+        {
+            IndentationScope scope(m_indent);
+            m_stringBuilder.append(m_indent, "auto vec1 = as_type<packed_char4>(lhs);");
+            m_stringBuilder.append(m_indent, "auto vec2 = as_type<packed_char4>(rhs);");
+            m_stringBuilder.append(m_indent, "return vec1[0] * vec2[0] + vec1[1] * vec2[1] + vec1[2] * vec2[2] + vec1[3] * vec2[3];");
+        }
+        m_stringBuilder.append(m_indent, "}\n");
+    }
+
+    if (m_callGraph.ast().usesDot4U8Packed()) {
+        m_stringBuilder.append(m_indent, "uint __wgslDot4U8Packed(uint lhs, uint rhs)\n");
+        m_stringBuilder.append(m_indent, "{\n");
+        {
+            IndentationScope scope(m_indent);
+            m_stringBuilder.append(m_indent, "auto vec1 = as_type<packed_uchar4>(lhs);");
+            m_stringBuilder.append(m_indent, "auto vec2 = as_type<packed_uchar4>(rhs);");
+            m_stringBuilder.append(m_indent, "return vec1[0] * vec2[0] + vec1[1] * vec2[1] + vec1[2] * vec2[2] + vec1[3] * vec2[3];");
+        }
+        m_stringBuilder.append(m_indent, "}\n");
+    }
+
     if (m_callGraph.ast().usesFirstLeadingBit()) {
         m_stringBuilder.append(m_indent, "template<typename T>\n");
         m_stringBuilder.append(m_indent, "T __wgslFirstLeadingBit(T e)\n");
@@ -1833,6 +1857,8 @@ void FunctionDefinitionWriter::visit(const Type* type, AST::CallExpression& call
             { "countOneBits", "popcount"_s },
             { "countTrailingZeros", "ctz"_s },
             { "dot", "__wgslDot"_s },
+            { "dot4I8Packed", "__wgslDot4I8Packed"_s },
+            { "dot4U8Packed", "__wgslDot4U8Packed"_s },
             { "dpdx", "dfdx"_s },
             { "dpdxCoarse", "dfdx"_s },
             { "dpdxFine", "dfdx"_s },
